--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "ifood-clone",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
+  "name": "rn-workshop",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@react-navigation/core": "3.4.1",
-    "@react-navigation/web": "1.0.0-alpha.8",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-icons": "3.7.0",
-    "react-native-web": "0.11.2",
-    "react-scripts": "2.1.8",
-    "styled-components": "4.2.0"
-  },
-  "devDependencies": {
-    "typescript": "3.3.3"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-native-web": "^0.11.2",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
